Fix pipeline node properties dark mode (#1487)

--- a/packages/pipeline-editor/style/canvas.css
+++ b/packages/pipeline-editor/style/canvas.css
@@ -258,9 +258,9 @@ body[data-jp-theme-light='false'] .bx--modal.is-visible {
 }
 .bx--text-input__field-outer-wrapper
   > .bx--text-input__field-wrapper
-  > input.bx--text-input.bx--text__input {
+  > input.bx--text-input {
   color: var(--text-01);
-  border-bottom: 1px solid #cfd1d4;
+  background-color: var(--ui-background);
 }
 .properties-field-type {
   color: var(--text-01);
@@ -346,6 +346,8 @@ div.properties-modal-buttons,
 .properties-title-editor {
   padding: 0;
   height: auto;
+  background-color: var(--ui-background);
+  border-bottom: 1px solid var(--ui-03);
 }
 .properties-control-panel[data-id='properties-nodeFileControl']
   .properties-h-separator {
